use dt2nd textures for some textures

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -23,6 +23,8 @@ hash = quick
 09c2f980bf321ccbfcf81b82 = buttons\cirhld.png
 09c31f80f1d7c836deef26bd = buttons\sqhld.png
 09c30f002d46b75c923649ff = buttons\crshld.png
+00000000a65257e2c6844403 = buttons\hud1.png
+00000000c48db9d984d0189d = buttons\hud2.png
 
 
 #romeo and cinderella
