--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -25,7 +25,18 @@ hash = quick
 09c30f002d46b75c923649ff = buttons\crshld.png
 00000000a65257e2c6844403 = buttons\hud1.png
 00000000c48db9d984d0189d = buttons\hud2.png
-
+09c1c880c361e2b4316d2453 = buttons\cirhld2.png
+09c1d900cf7c5add76a27aed = buttons\crshld2.png
+09c20380af09f7c23cc4eb9f = buttons\sqhld2.png
+09c19b807116e92328bf5c3f = buttons\trihld2.png
+09c2af007fc82b23b590bb59 = buttons\dcrs.png
+09c2cc805eb8dc53edb6d23f = buttons\dsq.png
+09c29280fbef4a48d887de79 = buttons\dcir.png
+09c275009aefcc55fa286216 = buttons\dtri.png
+09c18b00eaec819f54af7300 = buttons\dsqbg.png
+09c11580c009ff4da0d6ab54 = buttons\dtribg.png
+09c13400b273341ccbfbf07e = buttons\dcirbg.png
+09c1508092b63e129c94c792 = buttons\dcrsbg.png
 
 #romeo and cinderella
 00000000bfffffbe3f22dd08 = stage\romeo\text.png
