now using xxh64 thanks to ayumi-chizuru189 on discord

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -1,42 +1,51 @@
 [options]
-# 1 is the only version, as of writing
 version = 1
-# Quick is the default hash.  Other options: xxh32, xxh64 (better hashes, but slower)
-# ALL hashes will change if you change this option, so pick one at the beginning and stick with it.
-hash = quick
+hash = xxh64
+ignoreAddress = true
+
 [hashes]
-#button textures
-09c22200b255692c9785391d = buttons\triangle.png
-09c23780aa9fca7ddbe537ac = buttons\circle.png
-09c26480abb0657933ba6da0 = buttons\square.png
-09c2480089cd9dcf315d10d2 = buttons\cross.png
-09c37f004e3fee9a038c66c4 = buttons\line1.png
-09c3a40024f34317949fc5a4 = buttons\line2.png
-09c3c9002c8acdd1fe1de371 = buttons\line3.png
-09c3ee00848ef2a4f2d1ee55 = buttons\line4.png
-09c35a002b63cd0c69677eee = buttons\wavyline.png
-09c0b2003aaebbf2cedeaae2 = buttons\tribg.png
-09c0c280255748d9eece3d72 = buttons\cirbg.png
-09c0fb0003a86d254377bdff = buttons\sqbg.png
-09c07100bfb3dd1ef2458a61 = buttons\crsbg.png
-09c2dd007a5e022a977908b2 = buttons\trihld.png
-09c2f980bf321ccbfcf81b82 = buttons\cirhld.png
-09c31f80f1d7c836deef26bd = buttons\sqhld.png
-09c30f002d46b75c923649ff = buttons\crshld.png
-00000000a65257e2c6844403 = buttons\hud1.png
-00000000c48db9d984d0189d = buttons\hud2.png
-09c1c880c361e2b4316d2453 = buttons\cirhld2.png
-09c1d900cf7c5add76a27aed = buttons\crshld2.png
-09c20380af09f7c23cc4eb9f = buttons\sqhld2.png
-09c19b807116e92328bf5c3f = buttons\trihld2.png
-09c2af007fc82b23b590bb59 = buttons\dcrs.png
-09c2cc805eb8dc53edb6d23f = buttons\dsq.png
-09c29280fbef4a48d887de79 = buttons\dcir.png
-09c275009aefcc55fa286216 = buttons\dtri.png
-09c18b00eaec819f54af7300 = buttons\dsqbg.png
-09c11580c009ff4da0d6ab54 = buttons\dtribg.png
-09c13400b273341ccbfbf07e = buttons\dcirbg.png
-09c1508092b63e129c94c792 = buttons\dcrsbg.png
+#main button textures
+00000000b255692cc7df8415 = buttons\triangle.png
+00000000aa9fca7d06f6466c = buttons\circle.png
+00000000abb0657932f85a52 = buttons\square.png
+0000000089cd9dcf7bc1ba5f = buttons\cross.png
+000000004e3fee9afba75ab8 = buttons\line1.png
+0000000024f3431742c87c5e = buttons\line2.png
+000000002c8acdd15593c193 = buttons\line3.png
+00000000848ef2a4693ee2f8 = buttons\line4.png
+000000002b63cd0c8b225374 = buttons\wavyline.png
+
+#hold1 button textures
+000000003aaebbf2e28295d4 = buttons\tribg.png
+00000000255748d9bfbb79ac = buttons\cirbg.png
+0000000003a86d25e8e72ea8 = buttons\sqbg.png
+00000000bfb3dd1ebb76f0e1 = buttons\crsbg.png
+000000007a5e022aa691d120 = buttons\trihld.png
+00000000bf321ccb65c29611 = buttons\cirhld.png
+00000000f1d7c8366aa740f4 = buttons\sqhld.png
+000000002d46b75c9fbafb49 = buttons\crshld.png
+
+#hud
+00000000a65257e202be152e = buttons\hud1.png
+00000000c48db9d9d3653a5a = buttons\hud2.png
+
+#hold2 button textures
+00000000c361e2b4be256c8e = buttons\cirhld2.png
+00000000cf7c5addca30aebd = buttons\crshld2.png
+00000000af09f7c2d733152b = buttons\sqhld2.png
+000000007116e9235a49b016 = buttons\trihld2.png
+
+#arrow button textures
+000000007fc82b2397c02053 = buttons\dcrs.png
+000000005eb8dc53e13d6756 = buttons\dsq.png
+00000000fbef4a487187bba3 = buttons\dcir.png
+000000009aefcc5535817b1e = buttons\dtri.png
+
+#arrow BG button textures
+00000000eaec819fcb5a2197 = buttons\dsqbg.png
+00000000c009ff4df27781bc = buttons\dtribg.png
+00000000b273341c2ed663af = buttons\dcirbg.png
+0000000092b63e126d0e37f6 = buttons\dcrsbg.png
 
 #romeo and cinderella
 00000000bfffffbe3f22dd08 = stage\romeo\text.png
