--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -4,6 +4,9 @@ hash = xxh64
 ignoreAddress = true
 
 [hashes]
+#menus
+000000008f0e5127874804d4 = menu\romeo.png
+
 #main button textures
 00000000b255692cc7df8415 = buttons\triangle.png
 00000000aa9fca7d06f6466c = buttons\circle.png
@@ -14,6 +17,12 @@ ignoreAddress = true
 000000002c8acdd15593c193 = buttons\line3.png
 00000000848ef2a4693ee2f8 = buttons\line4.png
 000000002b63cd0c8b225374 = buttons\wavyline.png
+0000000036132047a2fa9c6f = buttons\notehit.png
+00000000592945949b8e045c = buttons\notehit2.png
+00000000bfdd2786e995736e = buttons\notehit3.png
+00000000d90684b069687e92 = buttons\notehit4.png
+000000005a702bb49942f204 = buttons\notehit5.png
+000000009883c0ab14f32721 = buttons\notehit6.png
 
 #hold1 button textures
 000000003aaebbf2e28295d4 = buttons\tribg.png
@@ -48,4 +57,10 @@ ignoreAddress = true
 0000000092b63e126d0e37f6 = buttons\dcrsbg.png
 
 #romeo and cinderella
-00000000bfffffbe3f22dd08 = stage\romeo\text.png
+00000000bfffffbe00000000 = stage\romeo\text.png
+0000000026a38892b4f0b1cc = stage\romeo\branch.png
+0000000040cd9c057131b76a = stage\romeo\window.png
+000000004407d2cfc86f742a = stage\romeo\clocktower.png
+000000006058d568346facf0 = stage\romeo\wall.png
+00000000988a85227f4fa338 = stage\romeo\window.png
+000000006013059816d8f0b0 = stage\romeo\wall2.png
