--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -64,3 +64,7 @@ ignoreAddress = true
 000000006058d568346facf0 = stage\romeo\wall.png
 00000000988a85227f4fa338 = stage\romeo\window.png
 000000006013059816d8f0b0 = stage\romeo\wall2.png
+
+#song select
+00000000686fc6227f1d0c6f = menu\pic2.png
+0000000035fb9e219b1b4a52 = menu\pic1.png
