New additions (load screens and logos)
Load screens and logos taken from DT2nd

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -5,7 +5,62 @@ ignoreAddress = true
 
 [hashes]
 #menus
+000000009347c72308be62bc = menu\sega.png
+000000009accbeb391bd6634 = menu\crypton.png
+000000005cadfb956f54828a = menu\dingo.png
 000000008f0e5127874804d4 = menu\romeo.png
+
+#loadscreens
+000000000f77d77d175b47e2 = loadscreens\load1.png
+00000000a37f18f95634f12d = loadscreens\load2.png
+00000000a55b0068cde76a26 = loadscreens\load3.png
+00000000afbd1256252fe65d = loadscreens\load4.png
+00000000b57dc9c4360fe1de = loadscreens\load5.png
+00000000be18e25b21c40127 = loadscreens\load6.png
+00000000c0dd76258cccb830 = loadscreens\load7.png
+00000000c968c2fc5682e17f = loadscreens\load8.png
+00000000ca19507f826f8ffe = loadscreens\load9.png
+00000000d7f0a1b1a923f47c = loadscreens\load10.png
+00000000d29a8ae2c2e6a6ac = loadscreens\load11.png
+00000000d433c15c824a3b44 = loadscreens\load12.png
+00000000d67132f7abd2add5 = loadscreens\load13.png
+00000000db9ed9eb4a3e1f62 = loadscreens\load14.png
+00000000dd231c248722a446 = loadscreens\load15.png
+00000000dff0be46158d379e = loadscreens\load16.png
+00000000dffb4f9f18e3ae26 = loadscreens\load17.png
+00000000e7389aab2bf7c3e4 = loadscreens\load18.png
+00000000ed4c5cf3deb75921 = loadscreens\load19.png
+00000000f7b17f20ac3dc423 = loadscreens\load20.png
+00000000f351a9d1871f790c = loadscreens\load21.png
+00000000fd310f889489fef0 = loadscreens\load22.png
+000000002a6d860642c3453f = loadscreens\load23.png
+000000005bc7184bc1616a8b = loadscreens\load24.png
+000000005f3f9567dc75b9a1 = loadscreens\load25.png
+000000005fc0fde082380db6 = loadscreens\load26.png
+000000007eace4221f1b837a = loadscreens\load27.png
+000000007fb53253a1044012 = loadscreens\load28.png
+000000008db31610558ca2c4 = loadscreens\load29.png
+000000008dcb70af424c1450 = loadscreens\load30.png
+000000009e933ba7215638ca = loadscreens\load31.png
+000000009f9c4a4b9a71ee9f = loadscreens\load32.png
+0000000012a7245e0dea4052 = loadscreens\load33.png
+0000000012e95ac022810632 = loadscreens\load34.png
+0000000017b667795bee6fdf = loadscreens\load35.png
+0000000024c2292490287a34 = loadscreens\load36.png
+0000000033caf774762cc5f1 = loadscreens\load37.png
+00000000096a517ed6036db9 = loadscreens\load38.png
+00000000249dc83d6384d660 = loadscreens\load39.png
+00000000341ddd3c86dd956d = loadscreens\load40.png
+00000000473b5ce16bde9501 = loadscreens\load41.png
+00000000597ff134b0fc874b = loadscreens\load42.png
+00000000948da3aaf1bc6ee6 = loadscreens\load43.png
+00000000968d2d1286d3129a = loadscreens\load44.png
+000000003047bd3a99f31e93 = loadscreens\load45.png
+0000000065303d4aaa3d0e96 = loadscreens\load46.png
+0000000078424e4907b42958 = loadscreens\load47.png
+00000000962373ea2b62c084 = loadscreens\load48.png
+00000000977218bd7a4b877d = loadscreens\load49.png
+00000000892481155859ae13 = loadscreens\load50.png
 
 #main button textures
 00000000b255692cc7df8415 = buttons\triangle.png
@@ -23,6 +78,8 @@ ignoreAddress = true
 00000000d90684b069687e92 = buttons\notehit4.png
 000000005a702bb49942f204 = buttons\notehit5.png
 000000009883c0ab14f32721 = buttons\notehit6.png
+0000000080dfa62a3b6f5e5e = buttons\notehit7.png
+0000000065247e2ac6142352 = buttons\notehit8.png
 
 #hold1 button textures
 000000003aaebbf2e28295d4 = buttons\tribg.png
