--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -113,6 +113,12 @@ ignoreAddress = true
 00000000b273341c2ed663af = buttons\dcirbg.png
 0000000092b63e126d0e37f6 = buttons\dcrsbg.png
 
+#song select
+00000000686fc6227f1d0c6f = menu\pic2.png
+0000000035fb9e219b1b4a52 = menu\pic1.png
+
+#SONGS
+
 #romeo and cinderella
 00000000bfffffbe00000000 = stage\romeo\text.png
 0000000026a38892b4f0b1cc = stage\romeo\branch.png
@@ -122,6 +128,136 @@ ignoreAddress = true
 00000000988a85227f4fa338 = stage\romeo\window.png
 000000006013059816d8f0b0 = stage\romeo\wall2.png
 
-#song select
-00000000686fc6227f1d0c6f = menu\pic2.png
-0000000035fb9e219b1b4a52 = menu\pic1.png
+#magnet (N/A)
+#folder: magnet
+
+#ai kotoba (N/A)
+#folder: aikotoba
+
+#sound (N/A) 
+#folder: sound
+
+#kokoro (N/A) 
+#folder: kokoro
+
+#packaged (N/A) 
+#folder: packaged
+
+#migikata no chou (N/A)
+#folder: butterfly
+
+#marginal (N/A)
+#folder: marginal
+
+#the secret garden (N/A) 
+#folder: garden
+
+#just be friends (N/A) 
+#folder: friends
+
+#strobe nights (N/A) 
+#folder: strobe
+
+#clover club (N/A)
+#folder: clover
+
+#from y to y (N/A)
+#folder: y2y
+
+#love list koushinchuu? (N/A)
+#folder: lovelist
+
+#yellow (N/A) 
+#folder: yellow
+
+#inochi no uta (N/A)
+#folder: inochi
+
+#change me (N/A) 
+#folder: changeme
+
+#popipo (N/A)
+#folder: popipo
+
+#cantarella (N/A)
+#folder: cantarella
+
+#hajimete no koi ga owaru toki
+000000000a1b1974cf9a43e1 = stage\hajimete\text.png
+
+#kouya to mori to mahou no uta (N/A) 
+#folder: forest
+#dear cocoa girls (N/A) 
+#folder: cocoa
+
+#kyodai shoujo (N/A)
+#folder: giantgirl
+
+#dear (N/A) 
+#folder: dear
+
+#gemini (N/A) 
+#folder: gemini
+
+#VOiCE (N/A) 
+#folder: voice
+
+#world is mine (N/A) 
+#folder: worldismine
+
+#miracle paint (N/A) 
+#folder: miracle
+
+#moon (N/A) 
+#folder: moon
+
+#biroudo arabesque (N/A) 
+#folder: arabesque
+
+#innocence (N/A) 
+#folder: innocence
+
+#roshin yuukai (N/A) 
+#folder: meltdown
+
+#honto wa wakatteru (N/A) 
+#folder: honto
+
+#melt (N/A) 
+#folder: melt
+
+#koi iro byoutou (N/A) 
+#folder: ward
+
+#finder (N/A) 
+#folder: finder
+
+#promise (N/A) 
+#folder: promise
+
+#mikumiku kin ni gochuui (N/A)
+#folder: bacteria
+
+#hajimete no oto (N/A)
+#folder: firstsound
+
+#hato (N/A) 
+#folder: hato
+
+#saihate (N/A)
+#folder: saihate
+
+#kocchi muite baby (N/A)
+#folder: kocchimuite
+
+#colorful x melody (N/A)
+#folder: colorful
+
+#double lariat (N/A)
+#folder: double
+
+#mikumiku ni shite ageru (N/A) 
+#folder: shiteageru
+
+#hatsune miku no gekishou (N/A)
+#folder: gekishou
