Fix hud1 again + new title screen
logo is an edited f2 will replace when I get an hd 2nd logo

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -9,6 +9,7 @@ ignoreAddress = true
 000000009accbeb391bd6634 = menu\crypton.png
 000000005cadfb956f54828a = menu\dingo.png
 000000008f0e5127874804d4 = menu\romeo.png
+000000003610c55c227cccb3 = menu\title.png
 
 #loadscreens
 000000000f77d77d175b47e2 = loadscreens\load1.png
