--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -5,6 +5,7 @@ ignoreAddress = true
 
 [hashes]
 #menus
+00000000c2fd5bdd23514514 = menu\loading.png
 000000009347c72308be62bc = menu\sega.png
 000000009accbeb391bd6634 = menu\crypton.png
 000000005cadfb956f54828a = menu\dingo.png
