add "hd" titlecards for songs
courtesy of ayumi-chizuru189
also add missing loadscreen texture

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -9,8 +9,54 @@ ignoreAddress = true
 000000009347c72308be62bc = menu\sega.png
 000000009accbeb391bd6634 = menu\crypton.png
 000000005cadfb956f54828a = menu\dingo.png
-000000008f0e5127874804d4 = menu\romeo.png
 000000003610c55c227cccb3 = menu\title.png
+000000008f0e5127874804d4 = menu\romeo.png
+000000008f0e5127c86a9508 = menu\magnet.png
+000000008f0e512750f218ee = menu\aikotoba.png
+000000008f0e5127c0433957 = menu\sound.png
+000000008f0e51275c969067 = menu\kokoro.png
+000000008f0e512754487f0e = menu\packaged.png
+000000008f0e5127089d381a = menu\butterfly.png
+000000008f0e51270cd8fbba = menu\marginal.png
+000000008f0e512760dbeb76 = menu\garden.png
+000000008f0e51275d1acba9 = menu\friends.png
+000000008f0e51274a0ee9a5 = menu\strobe.png
+000000008f0e5127a4e38e8f = menu\clover.png
+000000008f0e5127c4b020f1 = menu\y2y.png
+000000008f0e5127cc73f51c = menu\lovelist.png
+000000008f0e5127ae6c7c9c = menu\yellow.png
+000000008f0e5127f4832f97 = menu\inochi.png
+000000008f0e51273e5e04f1 = menu\changeme.png
+000000008f0e5127c827fc01 = menu\popipo.png
+000000008f0e5127a3340531 = menu\cantarella.png
+000000008f0e5127556d7a1d = menu\hajimete.png
+000000008f0e512777210119 = menu\forest.png
+000000008f0e5127a3f2ff98 = menu\cocoa.png
+000000008f0e512793c49b50 = menu\giantgirl.png
+000000008f0e51272671995e = menu\dear.png
+000000008f0e51274291ac46 = menu\gemini.png
+000000008f0e5127fcc2c4cf = menu\voice.png
+000000008f0e51277f4362c6 = menu\worldismine.png
+000000008f0e5127181ddea7 = menu\miracle.png
+000000008f0e51279aa71aa6 = menu\moon.png
+000000008f0e512750823a7c = menu\arabesque.png
+000000008f0e5127cd4e6968 = menu\innocence.png
+000000008f0e51274f245553 = menu\meltdown.png
+000000008f0e512726d60818 = menu\honto.png
+000000008f0e512701d5c2ef = menu\melt.png
+000000008f0e5127160a8418 = menu\ward.png
+000000008f0e5127e7587657 = menu\finder.png
+000000008f0e51273b0eb1b4 = menu\promise.png
+000000008f0e5127f66989fb = menu\bacteria.png
+000000008f0e512766328826 = menu\firstsound.png
+000000008f0e51277a3d8b3e = menu\hato.png
+000000008f0e5127dc178c72 = menu\saihate.png
+000000008f0e5127e5bbefa1 = menu\kocchimuite.png
+000000008f0e512712e3719d = menu\colorful.png
+000000008f0e51276a632370 = menu\double.png
+000000008f0e5127dc760ae8 = menu\shiteageru.png
+000000008f0e5127040a6e44 = menu\gekishou.png
+
 
 #loadscreens
 000000000f77d77d175b47e2 = loadscreens\load1.png
@@ -189,6 +235,7 @@ ignoreAddress = true
 
 #kouya to mori to mahou no uta (N/A) 
 #folder: forest
+
 #dear cocoa girls (N/A) 
 #folder: cocoa
 
