Remade results screen using some elements from DT2nd/Extend and recreation
looks nice overall but still haven't fixed the top border

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -165,6 +165,9 @@ ignoreAddress = true
 00000000686fc6227f1d0c6f = menu\pic2.png
 0000000035fb9e219b1b4a52 = menu\pic1.png
 
+#results screen
+0000000075209ed227fd992d = menu\result1.png
+0000000093c420ed74d88c3f = menu\result2.png
 #SONGS
 
 #romeo and cinderella
