--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -10,6 +10,9 @@ ignoreAddress = true
 000000009accbeb391bd6634 = menu\crypton.png
 000000005cadfb956f54828a = menu\dingo.png
 000000003610c55c227cccb3 = menu\title.png
+00000000938d8129385a3cbe = menu\pv.png
+0000000020197a284ae47ed8 = menu\start.png
+000000008c1763cf3d112d5c = menu\selrslt.png
 000000008f0e5127874804d4 = menu\romeo.png
 000000008f0e5127c86a9508 = menu\magnet.png
 000000008f0e512750f218ee = menu\aikotoba.png
