--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -12,6 +12,11 @@ ignoreAddress = true
 000000003610c55c227cccb3 = menu\title.png
 00000000938d8129385a3cbe = menu\pv.png
 0000000020197a284ae47ed8 = menu\start.png
+00000000c91e41a73b741dd0 = menu\chara.png
+00000000ec7bbc6b137c8933 = menu\bottom.png
+00000000ce038eaf5b95ce28 = menu\underlay.png
+000000009db95ccb7dde6d4d = menu\rhythm.png
+000000009db95ccb42cae3b1 = menu\home.png
 000000008c1763cf3d112d5c = menu\selrslt.png
 000000008f0e5127874804d4 = menu\romeo.png
 000000008f0e5127c86a9508 = menu\magnet.png
