--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -5,187 +5,187 @@ ignoreAddress = true
 
 [hashes]
 #menus
-00000000c2fd5bdd23514514 = menu\loading.png
-000000009347c72308be62bc = menu\sega.png
-000000009accbeb391bd6634 = menu\crypton.png
-000000005cadfb956f54828a = menu\dingo.png
-000000003610c55c227cccb3 = menu\title.png
-00000000938d8129385a3cbe = menu\pv.png
-0000000020197a284ae47ed8 = menu\start.png
-00000000c91e41a73b741dd0 = menu\chara.png
-00000000ec7bbc6b137c8933 = menu\bottom.png
-00000000ce038eaf5b95ce28 = menu\underlay.png
-000000009db95ccb7dde6d4d = menu\rhythm.png
-000000009db95ccb42cae3b1 = menu\home.png
-000000008c1763cf3d112d5c = menu\selrslt.png
-000000008f0e5127874804d4 = menu\romeo.png
-000000008f0e5127c86a9508 = menu\magnet.png
-000000008f0e512750f218ee = menu\aikotoba.png
-000000008f0e5127c0433957 = menu\sound.png
-000000008f0e51275c969067 = menu\kokoro.png
-000000008f0e512754487f0e = menu\packaged.png
-000000008f0e5127089d381a = menu\butterfly.png
-000000008f0e51270cd8fbba = menu\marginal.png
-000000008f0e512760dbeb76 = menu\garden.png
-000000008f0e51275d1acba9 = menu\friends.png
-000000008f0e51274a0ee9a5 = menu\strobe.png
-000000008f0e5127a4e38e8f = menu\clover.png
-000000008f0e5127c4b020f1 = menu\y2y.png
-000000008f0e5127cc73f51c = menu\lovelist.png
-000000008f0e5127ae6c7c9c = menu\yellow.png
-000000008f0e5127f4832f97 = menu\inochi.png
-000000008f0e51273e5e04f1 = menu\changeme.png
-000000008f0e5127c827fc01 = menu\popipo.png
-000000008f0e5127a3340531 = menu\cantarella.png
-000000008f0e5127556d7a1d = menu\hajimete.png
-000000008f0e512777210119 = menu\forest.png
-000000008f0e5127a3f2ff98 = menu\cocoa.png
-000000008f0e512793c49b50 = menu\giantgirl.png
-000000008f0e51272671995e = menu\dear.png
-000000008f0e51274291ac46 = menu\gemini.png
-000000008f0e5127fcc2c4cf = menu\voice.png
-000000008f0e51277f4362c6 = menu\worldismine.png
-000000008f0e5127181ddea7 = menu\miracle.png
-000000008f0e51279aa71aa6 = menu\moon.png
-000000008f0e512750823a7c = menu\arabesque.png
-000000008f0e5127cd4e6968 = menu\innocence.png
-000000008f0e51274f245553 = menu\meltdown.png
-000000008f0e512726d60818 = menu\honto.png
-000000008f0e512701d5c2ef = menu\melt.png
-000000008f0e5127160a8418 = menu\ward.png
-000000008f0e5127e7587657 = menu\finder.png
-000000008f0e51273b0eb1b4 = menu\promise.png
-000000008f0e5127f66989fb = menu\bacteria.png
-000000008f0e512766328826 = menu\firstsound.png
-000000008f0e51277a3d8b3e = menu\hato.png
-000000008f0e5127dc178c72 = menu\saihate.png
-000000008f0e5127e5bbefa1 = menu\kocchimuite.png
-000000008f0e512712e3719d = menu\colorful.png
-000000008f0e51276a632370 = menu\double.png
-000000008f0e5127dc760ae8 = menu\shiteageru.png
-000000008f0e5127040a6e44 = menu\gekishou.png
+00000000c2fd5bdd23514514 = menu/loading.png
+000000009347c72308be62bc = menu/sega.png
+000000009accbeb391bd6634 = menu/crypton.png
+000000005cadfb956f54828a = menu/dingo.png
+000000003610c55c227cccb3 = menu/title.png
+00000000938d8129385a3cbe = menu/pv.png
+0000000020197a284ae47ed8 = menu/start.png
+00000000c91e41a73b741dd0 = menu/chara.png
+00000000ec7bbc6b137c8933 = menu/bottom.png
+00000000ce038eaf5b95ce28 = menu/underlay.png
+000000009db95ccb7dde6d4d = menu/rhythm.png
+000000009db95ccb42cae3b1 = menu/home.png
+000000008c1763cf3d112d5c = menu/selrslt.png
+000000008f0e5127874804d4 = menu/romeo.png
+000000008f0e5127c86a9508 = menu/magnet.png
+000000008f0e512750f218ee = menu/aikotoba.png
+000000008f0e5127c0433957 = menu/sound.png
+000000008f0e51275c969067 = menu/kokoro.png
+000000008f0e512754487f0e = menu/packaged.png
+000000008f0e5127089d381a = menu/butterfly.png
+000000008f0e51270cd8fbba = menu/marginal.png
+000000008f0e512760dbeb76 = menu/garden.png
+000000008f0e51275d1acba9 = menu/friends.png
+000000008f0e51274a0ee9a5 = menu/strobe.png
+000000008f0e5127a4e38e8f = menu/clover.png
+000000008f0e5127c4b020f1 = menu/y2y.png
+000000008f0e5127cc73f51c = menu/lovelist.png
+000000008f0e5127ae6c7c9c = menu/yellow.png
+000000008f0e5127f4832f97 = menu/inochi.png
+000000008f0e51273e5e04f1 = menu/changeme.png
+000000008f0e5127c827fc01 = menu/popipo.png
+000000008f0e5127a3340531 = menu/cantarella.png
+000000008f0e5127556d7a1d = menu/hajimete.png
+000000008f0e512777210119 = menu/forest.png
+000000008f0e5127a3f2ff98 = menu/cocoa.png
+000000008f0e512793c49b50 = menu/giantgirl.png
+000000008f0e51272671995e = menu/dear.png
+000000008f0e51274291ac46 = menu/gemini.png
+000000008f0e5127fcc2c4cf = menu/voice.png
+000000008f0e51277f4362c6 = menu/worldismine.png
+000000008f0e5127181ddea7 = menu/miracle.png
+000000008f0e51279aa71aa6 = menu/moon.png
+000000008f0e512750823a7c = menu/arabesque.png
+000000008f0e5127cd4e6968 = menu/innocence.png
+000000008f0e51274f245553 = menu/meltdown.png
+000000008f0e512726d60818 = menu/honto.png
+000000008f0e512701d5c2ef = menu/melt.png
+000000008f0e5127160a8418 = menu/ward.png
+000000008f0e5127e7587657 = menu/finder.png
+000000008f0e51273b0eb1b4 = menu/promise.png
+000000008f0e5127f66989fb = menu/bacteria.png
+000000008f0e512766328826 = menu/firstsound.png
+000000008f0e51277a3d8b3e = menu/hato.png
+000000008f0e5127dc178c72 = menu/saihate.png
+000000008f0e5127e5bbefa1 = menu/kocchimuite.png
+000000008f0e512712e3719d = menu/colorful.png
+000000008f0e51276a632370 = menu/double.png
+000000008f0e5127dc760ae8 = menu/shiteageru.png
+000000008f0e5127040a6e44 = menu/gekishou.png
 
 
 #loadscreens
-000000000f77d77d175b47e2 = loadscreens\load1.png
-00000000a37f18f95634f12d = loadscreens\load2.png
-00000000a55b0068cde76a26 = loadscreens\load3.png
-00000000afbd1256252fe65d = loadscreens\load4.png
-00000000b57dc9c4360fe1de = loadscreens\load5.png
-00000000be18e25b21c40127 = loadscreens\load6.png
-00000000c0dd76258cccb830 = loadscreens\load7.png
-00000000c968c2fc5682e17f = loadscreens\load8.png
-00000000ca19507f826f8ffe = loadscreens\load9.png
-00000000d7f0a1b1a923f47c = loadscreens\load10.png
-00000000d29a8ae2c2e6a6ac = loadscreens\load11.png
-00000000d433c15c824a3b44 = loadscreens\load12.png
-00000000d67132f7abd2add5 = loadscreens\load13.png
-00000000db9ed9eb4a3e1f62 = loadscreens\load14.png
-00000000dd231c248722a446 = loadscreens\load15.png
-00000000dff0be46158d379e = loadscreens\load16.png
-00000000dffb4f9f18e3ae26 = loadscreens\load17.png
-00000000e7389aab2bf7c3e4 = loadscreens\load18.png
-00000000ed4c5cf3deb75921 = loadscreens\load19.png
-00000000f7b17f20ac3dc423 = loadscreens\load20.png
-00000000f351a9d1871f790c = loadscreens\load21.png
-00000000fd310f889489fef0 = loadscreens\load22.png
-000000002a6d860642c3453f = loadscreens\load23.png
-000000005bc7184bc1616a8b = loadscreens\load24.png
-000000005f3f9567dc75b9a1 = loadscreens\load25.png
-000000005fc0fde082380db6 = loadscreens\load26.png
-000000007eace4221f1b837a = loadscreens\load27.png
-000000007fb53253a1044012 = loadscreens\load28.png
-000000008db31610558ca2c4 = loadscreens\load29.png
-000000008dcb70af424c1450 = loadscreens\load30.png
-000000009e933ba7215638ca = loadscreens\load31.png
-000000009f9c4a4b9a71ee9f = loadscreens\load32.png
-0000000012a7245e0dea4052 = loadscreens\load33.png
-0000000012e95ac022810632 = loadscreens\load34.png
-0000000017b667795bee6fdf = loadscreens\load35.png
-0000000024c2292490287a34 = loadscreens\load36.png
-0000000033caf774762cc5f1 = loadscreens\load37.png
-00000000096a517ed6036db9 = loadscreens\load38.png
-00000000249dc83d6384d660 = loadscreens\load39.png
-00000000341ddd3c86dd956d = loadscreens\load40.png
-00000000473b5ce16bde9501 = loadscreens\load41.png
-00000000597ff134b0fc874b = loadscreens\load42.png
-00000000948da3aaf1bc6ee6 = loadscreens\load43.png
-00000000968d2d1286d3129a = loadscreens\load44.png
-000000003047bd3a99f31e93 = loadscreens\load45.png
-0000000065303d4aaa3d0e96 = loadscreens\load46.png
-0000000078424e4907b42958 = loadscreens\load47.png
-00000000962373ea2b62c084 = loadscreens\load48.png
-00000000977218bd7a4b877d = loadscreens\load49.png
-00000000892481155859ae13 = loadscreens\load50.png
+000000000f77d77d175b47e2 = loadscreens/load1.png
+00000000a37f18f95634f12d = loadscreens/load2.png
+00000000a55b0068cde76a26 = loadscreens/load3.png
+00000000afbd1256252fe65d = loadscreens/load4.png
+00000000b57dc9c4360fe1de = loadscreens/load5.png
+00000000be18e25b21c40127 = loadscreens/load6.png
+00000000c0dd76258cccb830 = loadscreens/load7.png
+00000000c968c2fc5682e17f = loadscreens/load8.png
+00000000ca19507f826f8ffe = loadscreens/load9.png
+00000000d7f0a1b1a923f47c = loadscreens/load10.png
+00000000d29a8ae2c2e6a6ac = loadscreens/load11.png
+00000000d433c15c824a3b44 = loadscreens/load12.png
+00000000d67132f7abd2add5 = loadscreens/load13.png
+00000000db9ed9eb4a3e1f62 = loadscreens/load14.png
+00000000dd231c248722a446 = loadscreens/load15.png
+00000000dff0be46158d379e = loadscreens/load16.png
+00000000dffb4f9f18e3ae26 = loadscreens/load17.png
+00000000e7389aab2bf7c3e4 = loadscreens/load18.png
+00000000ed4c5cf3deb75921 = loadscreens/load19.png
+00000000f7b17f20ac3dc423 = loadscreens/load20.png
+00000000f351a9d1871f790c = loadscreens/load21.png
+00000000fd310f889489fef0 = loadscreens/load22.png
+000000002a6d860642c3453f = loadscreens/load23.png
+000000005bc7184bc1616a8b = loadscreens/load24.png
+000000005f3f9567dc75b9a1 = loadscreens/load25.png
+000000005fc0fde082380db6 = loadscreens/load26.png
+000000007eace4221f1b837a = loadscreens/load27.png
+000000007fb53253a1044012 = loadscreens/load28.png
+000000008db31610558ca2c4 = loadscreens/load29.png
+000000008dcb70af424c1450 = loadscreens/load30.png
+000000009e933ba7215638ca = loadscreens/load31.png
+000000009f9c4a4b9a71ee9f = loadscreens/load32.png
+0000000012a7245e0dea4052 = loadscreens/load33.png
+0000000012e95ac022810632 = loadscreens/load34.png
+0000000017b667795bee6fdf = loadscreens/load35.png
+0000000024c2292490287a34 = loadscreens/load36.png
+0000000033caf774762cc5f1 = loadscreens/load37.png
+00000000096a517ed6036db9 = loadscreens/load38.png
+00000000249dc83d6384d660 = loadscreens/load39.png
+00000000341ddd3c86dd956d = loadscreens/load40.png
+00000000473b5ce16bde9501 = loadscreens/load41.png
+00000000597ff134b0fc874b = loadscreens/load42.png
+00000000948da3aaf1bc6ee6 = loadscreens/load43.png
+00000000968d2d1286d3129a = loadscreens/load44.png
+000000003047bd3a99f31e93 = loadscreens/load45.png
+0000000065303d4aaa3d0e96 = loadscreens/load46.png
+0000000078424e4907b42958 = loadscreens/load47.png
+00000000962373ea2b62c084 = loadscreens/load48.png
+00000000977218bd7a4b877d = loadscreens/load49.png
+00000000892481155859ae13 = loadscreens/load50.png
 
 #main button textures
-00000000b255692cc7df8415 = buttons\triangle.png
-00000000aa9fca7d06f6466c = buttons\circle.png
-00000000abb0657932f85a52 = buttons\square.png
-0000000089cd9dcf7bc1ba5f = buttons\cross.png
-000000004e3fee9afba75ab8 = buttons\line1.png
-0000000024f3431742c87c5e = buttons\line2.png
-000000002c8acdd15593c193 = buttons\line3.png
-00000000848ef2a4693ee2f8 = buttons\line4.png
-000000002b63cd0c8b225374 = buttons\wavyline.png
-0000000036132047a2fa9c6f = buttons\notehit.png
-00000000592945949b8e045c = buttons\notehit2.png
-00000000bfdd2786e995736e = buttons\notehit3.png
-00000000d90684b069687e92 = buttons\notehit4.png
-000000005a702bb49942f204 = buttons\notehit5.png
-000000009883c0ab14f32721 = buttons\notehit6.png
-0000000080dfa62a3b6f5e5e = buttons\notehit7.png
-0000000065247e2ac6142352 = buttons\notehit8.png
+00000000b255692cc7df8415 = buttons/triangle.png
+00000000aa9fca7d06f6466c = buttons/circle.png
+00000000abb0657932f85a52 = buttons/square.png
+0000000089cd9dcf7bc1ba5f = buttons/cross.png
+000000004e3fee9afba75ab8 = buttons/line1.png
+0000000024f3431742c87c5e = buttons/line2.png
+000000002c8acdd15593c193 = buttons/line3.png
+00000000848ef2a4693ee2f8 = buttons/line4.png
+000000002b63cd0c8b225374 = buttons/wavyline.png
+0000000036132047a2fa9c6f = buttons/notehit.png
+00000000592945949b8e045c = buttons/notehit2.png
+00000000bfdd2786e995736e = buttons/notehit3.png
+00000000d90684b069687e92 = buttons/notehit4.png
+000000005a702bb49942f204 = buttons/notehit5.png
+000000009883c0ab14f32721 = buttons/notehit6.png
+0000000080dfa62a3b6f5e5e = buttons/notehit7.png
+0000000065247e2ac6142352 = buttons/notehit8.png
 
 #hold1 button textures
-000000003aaebbf2e28295d4 = buttons\tribg.png
-00000000255748d9bfbb79ac = buttons\cirbg.png
-0000000003a86d25e8e72ea8 = buttons\sqbg.png
-00000000bfb3dd1ebb76f0e1 = buttons\crsbg.png
-000000007a5e022aa691d120 = buttons\trihld.png
-00000000bf321ccb65c29611 = buttons\cirhld.png
-00000000f1d7c8366aa740f4 = buttons\sqhld.png
-000000002d46b75c9fbafb49 = buttons\crshld.png
+000000003aaebbf2e28295d4 = buttons/tribg.png
+00000000255748d9bfbb79ac = buttons/cirbg.png
+0000000003a86d25e8e72ea8 = buttons/sqbg.png
+00000000bfb3dd1ebb76f0e1 = buttons/crsbg.png
+000000007a5e022aa691d120 = buttons/trihld.png
+00000000bf321ccb65c29611 = buttons/cirhld.png
+00000000f1d7c8366aa740f4 = buttons/sqhld.png
+000000002d46b75c9fbafb49 = buttons/crshld.png
 
 #hud
-00000000a65257e202be152e = buttons\hud1.png
-00000000c48db9d9d3653a5a = buttons\hud2.png
+00000000a65257e202be152e = buttons/hud1.png
+00000000c48db9d9d3653a5a = buttons/hud2.png
 
 #hold2 button textures
-00000000c361e2b4be256c8e = buttons\cirhld2.png
-00000000cf7c5addca30aebd = buttons\crshld2.png
-00000000af09f7c2d733152b = buttons\sqhld2.png
-000000007116e9235a49b016 = buttons\trihld2.png
+00000000c361e2b4be256c8e = buttons/cirhld2.png
+00000000cf7c5addca30aebd = buttons/crshld2.png
+00000000af09f7c2d733152b = buttons/sqhld2.png
+000000007116e9235a49b016 = buttons/trihld2.png
 
 #arrow button textures
-000000007fc82b2397c02053 = buttons\dcrs.png
-000000005eb8dc53e13d6756 = buttons\dsq.png
-00000000fbef4a487187bba3 = buttons\dcir.png
-000000009aefcc5535817b1e = buttons\dtri.png
+000000007fc82b2397c02053 = buttons/dcrs.png
+000000005eb8dc53e13d6756 = buttons/dsq.png
+00000000fbef4a487187bba3 = buttons/dcir.png
+000000009aefcc5535817b1e = buttons/dtri.png
 
 #arrow BG button textures
-00000000eaec819fcb5a2197 = buttons\dsqbg.png
-00000000c009ff4df27781bc = buttons\dtribg.png
-00000000b273341c2ed663af = buttons\dcirbg.png
-0000000092b63e126d0e37f6 = buttons\dcrsbg.png
+00000000eaec819fcb5a2197 = buttons/dsqbg.png
+00000000c009ff4df27781bc = buttons/dtribg.png
+00000000b273341c2ed663af = buttons/dcirbg.png
+0000000092b63e126d0e37f6 = buttons/dcrsbg.png
 
 #song select
-00000000686fc6227f1d0c6f = menu\pic2.png
-0000000035fb9e219b1b4a52 = menu\pic1.png
+00000000686fc6227f1d0c6f = menu/pic2.png
+0000000035fb9e219b1b4a52 = menu/pic1.png
 
 #results screen
-0000000075209ed227fd992d = menu\result1.png
-0000000093c420ed74d88c3f = menu\result2.png
+0000000075209ed227fd992d = menu/result1.png
+0000000093c420ed74d88c3f = menu/result2.png
 #SONGS
 
 #romeo and cinderella
-00000000bfffffbe00000000 = stage\romeo\text.png
-0000000026a38892b4f0b1cc = stage\romeo\branch.png
-0000000040cd9c057131b76a = stage\romeo\window.png
-000000004407d2cfc86f742a = stage\romeo\clocktower.png
-000000006058d568346facf0 = stage\romeo\wall.png
-00000000988a85227f4fa338 = stage\romeo\window.png
-000000006013059816d8f0b0 = stage\romeo\wall2.png
+00000000bfffffbe00000000 = stage/romeo/text.png
+0000000026a38892b4f0b1cc = stage/romeo/branch.png
+0000000040cd9c057131b76a = stage/romeo/window.png
+000000004407d2cfc86f742a = stage/romeo/clocktower.png
+000000006058d568346facf0 = stage/romeo/wall.png
+00000000988a85227f4fa338 = stage/romeo/window.png
+000000006013059816d8f0b0 = stage/romeo/wall2.png
 
 #magnet (N/A)
 #folder: magnet
@@ -242,7 +242,7 @@ ignoreAddress = true
 #folder: cantarella
 
 #hajimete no koi ga owaru toki
-000000000a1b1974cf9a43e1 = stage\hajimete\text.png
+000000000a1b1974cf9a43e1 = stage/hajimete/text.png
 
 #kouya to mori to mahou no uta (N/A) 
 #folder: forest
