Add early "underlay2"
gonna need to fix this soon but gotta get it uploaded before i take a break

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -15,6 +15,7 @@ ignoreAddress = true
 00000000c91e41a73b741dd0 = menu/chara.png
 00000000ec7bbc6b137c8933 = menu/bottom.png
 00000000ce038eaf5b95ce28 = menu/underlay.png
+00000000ae1bb565f08fc480 = menu/underlay2.png
 000000009db95ccb7dde6d4d = menu/rhythm.png
 000000009db95ccb42cae3b1 = menu/home.png
 000000008c1763cf3d112d5c = menu/selrslt.png
