--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -16,6 +16,7 @@ ignoreAddress = true
 00000000ec7bbc6b137c8933 = menu/bottom.png
 00000000ce038eaf5b95ce28 = menu/underlay.png
 00000000ae1bb565f08fc480 = menu/underlay2.png
+00000000cb72c2544a3584f3 = menu/moduleselect.png
 000000009db95ccb7dde6d4d = menu/rhythm.png
 000000009db95ccb42cae3b1 = menu/home.png
 000000008c1763cf3d112d5c = menu/selrslt.png
