Added Module icons and Updated result1
thanks to ayumi-chizuru189 for the modules

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -175,6 +175,11 @@ ignoreAddress = true
 00000000686fc6227f1d0c6f = menu/pic2.png
 0000000035fb9e219b1b4a52 = menu/pic1.png
 
+#module select
+000000000df13847a3dc0b6d = menu/modu1.png
+000000007b9b78c50c5d4c9e = menu/modu2.png
+0000000051fdc1be18915da7 = menu/modu3.png
+
 #results screen
 0000000075209ed227fd992d = menu/result1.png
 0000000093c420ed74d88c3f = menu/result2.png
