--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -19,6 +19,8 @@ ignoreAddress = true
 00000000cb72c2544a3584f3 = menu/moduleselect.png
 000000009db95ccb7dde6d4d = menu/rhythm.png
 000000009db95ccb42cae3b1 = menu/home.png
+00000000c91e41a793ecfb5e = menu/divaroom.png
+00000000c91e41a7d4a6f4be = menu/moduleconvert.png
 000000008c1763cf3d112d5c = menu/selrslt.png
 000000008f0e5127874804d4 = menu/romeo.png
 000000008f0e5127c86a9508 = menu/magnet.png
