Add textures for 2nd# title screen

--- a/ULJM05681/textures.ini
+++ b/ULJM05681/textures.ini
@@ -6,10 +6,12 @@ ignoreAddress = true
 [hashes]
 #menus
 00000000c2fd5bdd23514514 = menu/loading.png
+0000000095fa9576e5bde68f = menu/loading2nd.png
 000000009347c72308be62bc = menu/sega.png
 000000009accbeb391bd6634 = menu/crypton.png
 000000005cadfb956f54828a = menu/dingo.png
 000000003610c55c227cccb3 = menu/title.png
+0000000016174e1ff9d5163f = menu/title2nd.png
 00000000938d8129385a3cbe = menu/pv.png
 0000000020197a284ae47ed8 = menu/start.png
 00000000c91e41a73b741dd0 = menu/chara.png
